manifest/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
