manifest/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    role: backend
  ports:
  - port: 80
    targetPort: 80
