manifest/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all-ingress
spec:
  endpointSelector: {}   # every pod
  ingressDeny:
  - {}
